# goldscope-api

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 20260420_0001_initial_schema.py
docs/: api_documentation.md  genai_declaration.md  presentation_outline.md  technical_report.md
scripts/: bootstrap_db.py  export_openapi.py  fetch_gold_prices.py  generate_submission_assets.py  generate_visual_report.py
src/goldscope/: __init__.py  app.py  main.py
src/goldscope/api/: deps.py  router.py
src/goldscope/api/routes/: alerts.py  auth.py  gold.py  health.py
src/goldscope/core/: config.py  errors.py  security.py
src/goldscope/db/: bootstrap.py  session.py
src/goldscope/models/: __init__.py  gold_price.py  price_alert.py  user.py
src/goldscope/schemas/: alerts.py  auth.py  gold.py
src/goldscope/services/: alerts.py  auth.py  gold.py  ingestion.py
src/goldscope_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_alerts.py  test_auth.py  test_config.py  test_gold.py
